onpremisekubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${DEPLOYMENT_NAME}
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      app: ${DEPLOYMENT_NAME}
  replicas: ${DEPLOYMENTREPLICA}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  template:
    metadata:
      labels:
        app: ${DEPLOYMENT_NAME}
    spec:
      containers:
      - name: ${DEPLOYMENT_NAME}
        image: ${IMAGE_NAME}
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ${DEPLOYMENT_NAME}-service
  namespace: ${NAMESPACE}
  labels:
    app: ${DEPLOYMENT_NAME}
spec:
  selector:
    app: ${DEPLOYMENT_NAME}
  type: ClusterIP
  ports:
    - port: ${PUBLIC_PORT}
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${DEPLOYMENT_NAME}-ingress-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "4m"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header X-Xss-Protection "1; mode=block";
      add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains; preload';
      add_header X-Content-Type-Options nosniff;
      add_header Content-Security-Policy "frame-src * data:; font-src * data:; img-src * data:; connect-src *";
      add_header Permissions-Policy "geolocation=*,midi=*,sync-xhr=*,microphone=*,camera=*,magnetometer=*,gyroscope=*,fullscreen=*,payment=*";
      add_header Referrer-Policy "strict-origin";
spec:
  ingressClassName: nginx
  rules:
    - host: ${HOSTNAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${DEPLOYMENT_NAME}-service
                port:
                  number: ${PUBLIC_PORT}
  tls:
    - hosts:
        - ${HOSTNAME}
      secretName: ${CERT_SECRET_NAME}
